@@ -1,4 +1,4 @@
-#' Create a per-cell data.frame 
+#' Create a per-cell data.frame
 #'
 #' Create a per-cell data.frame (i.e., where each row represents a cell) from a \linkS4class{SingleCellExperiment},
 #' most typically for creating custom \pkg{ggplot2} plots.
@@ -6,17 +6,19 @@
 #' @param x A \linkS4class{SingleCellExperiment} object.
 #' This is expected to have non-\code{NULL} row names.
 #' @param features Character vector specifying the features for which to extract expression profiles across cells.
-#' May also include features in alternative Experiments if permitted by \code{use_altexps}.
+#' May also include features in alternative Experiments if permitted by \code{use.altexps}.
 #' @param assay.type String or integer scalar indicating the assay to use to obtain expression values.
 #' Must refer to a matrix-like object with integer or numeric values.
 #' @param use.coldata Logical scalar indicating whether column metadata of \code{x} should be included.
 #' Alternatively, a character or integer vector specifying the column metadata fields to use.
 #' @param use.altexps Logical scalar indicating whether (meta)data should be extracted for alternative experiments in \code{x}.
-#' Alternatively, a character or integer vector specifying the alternative experiments to use. 
+#' Alternatively, a character or integer vector specifying the alternative experiments to use.
 #' @param use.dimred Logical scalar indicating whether data should be extracted for dimensionality reduction results in \code{x}.
 #' Alternatively, a character or integer vector specifying the dimensionality reduction results to use.
 #' @param prefix.altexps Logical scalar indicating whether \code{\link{altExp}}-derived fields should be prefixed with the name of the alternative Experiment.
 #' @param check.names Logical scalar indicating whether column names of the output should be made syntactically valid and unique.
+#' @param swap.rownames String specifying the \code{\link{rowData}} column containing the \code{features}.
+#' If \code{NULL}, \code{rownames(x)} is used.
 #' @param exprs_values,use_dimred,use_altexps,prefix_altexps,check_names
 #' Soft-deprecated equivalents of the arguments described above.
 #'
@@ -59,12 +61,13 @@
 #'
 #' df <- makePerCellDF(sce, features="Gene_0001")
 #' head(df)
-#' 
+#'
 #' @export
 #' @importFrom SingleCellExperiment colData reducedDims reducedDimNames altExps altExpNames
-makePerCellDF <- function(x, features=NULL, assay.type="logcounts", 
+makePerCellDF <- function(x, features=NULL, assay.type="logcounts",
     use.coldata=TRUE, use.dimred=TRUE, use.altexps=TRUE, prefix.altexps=FALSE, check.names=FALSE,
-    exprs_values=NULL, use_dimred=NULL, use_altexps=NULL, prefix_altexps=NULL, check_names=NULL)
+    swap.rownames = NULL, exprs_values=NULL, use_dimred=NULL, use_altexps=NULL, prefix_altexps=NULL,
+    check_names=NULL)
 {
     use.dimred <- .replace(use.dimred, use_dimred)
     use.altexps <- .replace(use.altexps, use_altexps)
@@ -72,7 +75,8 @@ makePerCellDF <- function(x, features=NULL, assay.type="logcounts",
     prefix.altexps <- .replace(prefix.altexps, prefix_altexps)
     check.names <- .replace(check.names, check_names)
 
-    output <- list(.harvest_se_by_column(x, features=features, assay.type=assay.type))
+    # Initialize output list
+    output <- list()
 
     # Collecting the column metadata.
     use.coldata <- .use_names_to_integer_indices(use.coldata, x=x, nameFUN=function(x) colnames(colData(x)), msg="use.coldata")
@@ -97,14 +101,16 @@ makePerCellDF <- function(x, features=NULL, assay.type="logcounts",
         output <- c(output, list(red_vals))
     }
 
-    # Collecting the alternative Experiments.
+    # Collecting feature data from main and alternative Experiments.
+    output <- c(output, .harvest_se_by_column(x, features=features, assay.type=assay.type, swap.rownames = swap.rownames))
+
     use.altexps <- .use_names_to_integer_indices(use.altexps, x=x, nameFUN=altExpNames, msg="use.altexps")
     if (length(use.altexps)) {
         all_alts <- altExps(x)[use.altexps]
         alt_vals <- vector("list", length(all_alts))
 
         for (a in seq_along(alt_vals)) {
-            curalt <- .harvest_se_by_column(all_alts[[a]], features=features, assay.type=assay.type)
+            curalt <- .harvest_se_by_column(all_alts[[a]], features=features, assay.type=assay.type, swap.rownames = swap.rownames)
             if (prefix.altexps) {
                 colnames(curalt) <- sprintf("%s.%s", names(all_alts)[a], colnames(curalt))
             }
@@ -123,18 +129,31 @@ makePerCellDF <- function(x, features=NULL, assay.type="logcounts",
     output
 }
 
-#' @importFrom SummarizedExperiment assay
+.empty_df_from_se <- function(x) {
+    data.frame(matrix(0, ncol(x), 0L), row.names=colnames(x))
+}
+
+#' @importFrom SummarizedExperiment assay rowData
 #' @importFrom Matrix t
-.harvest_se_by_column <- function(x, features, assay.type) {
-    keep <- rownames(x) %in% features
+.harvest_se_by_column <- function(x, features, assay.type, swap.rownames) {
+    if (is.null(swap.rownames)) {
+        all.feats <- rownames(x)
+    } else if (swap.rownames %in% colnames(rowData(x))) {
+        all.feats <- rowData(x)[,swap.rownames]
+    } else {
+        # Avoid throwing an error for altexps if it doesn't have the swapped rowData.
+        return(.empty_df_from_se(x))
+    }
+
+    keep <- all.feats %in% features
     if (any(keep)) {
         curmat <- assay(x, assay.type, withDimnames=FALSE)[keep,,drop=FALSE]
         curmat <- as.matrix(t(curmat))
         assay_vals <- data.frame(curmat, row.names=colnames(x))
-        colnames(assay_vals) <- rownames(x)[keep]
+        colnames(assay_vals) <- all.feats[keep]
         assay_vals
     } else {
         # Avoid throwing an error for altexps if the feature doesn't even match.
-        data.frame(matrix(0, ncol(x), 0L), row.names=colnames(x))
+        .empty_df_from_se(x)
     }
 }
