@@ -46,7 +46,7 @@ test_that("makePerCellDF works as expected", {
     # Do not fix my names unless requested.
     rownames(example_sce) <- paste0("+", seq_len(nrow(example_sce)))
     df0b <- makePerCellDF(example_sce, features=rownames(example_sce)[1:10])
-    expect_identical(colnames(df0b)[1:10], rownames(example_sce)[1:10])
+    expect_identical(tail(colnames(df0b), 10), rownames(example_sce)[1:10])
 
     reducedDimNames(example_sce)[1] <- "+-PCA"
     df0c <- makePerCellDF(example_sce)
@@ -54,7 +54,27 @@ test_that("makePerCellDF works as expected", {
 
     df0d <- makePerCellDF(example_sce, features=rownames(example_sce)[1:10], check.names=TRUE)
     expect_true("X..PCA.1" %in% colnames(df0d))
-    expect_identical(colnames(df0d)[1:10], make.names(rownames(example_sce)[1:10]))
+    expect_identical(tail(colnames(df0d), 10), make.names(rownames(example_sce)[1:10]))
+})
+
+test_that("makePerCellDF works with rowname swapping", {
+    rowData(example_sce)$alias <- sprintf("FEATURE_%s", seq_len(nrow(example_sce)))
+    df1 <- makePerCellDF(example_sce, features="FEATURE_1", swap.rownames="alias")
+    expect_identical(df1$FEATURE_1, unname(logcounts(example_sce)[1,]))
+
+    # Combines easily with altexps.
+    rowData(altExp(example_sce))$alias <- sprintf("thing_%s", seq_len(nrow(altExp(example_sce))))
+    df1 <- makePerCellDF(example_sce, features=c("FEATURE_10", "thing_9"), swap.rownames="alias")
+    expect_identical(df1$FEATURE_10, unname(logcounts(example_sce)[10,]))
+    expect_identical(df1$thing_9, unname(logcounts(altExp(example_sce))[9,]))
+
+    df1 <- makePerCellDF(example_sce, features=c("FEATURE_10", "thing_9"), swap.rownames="alias", prefix.altexps=TRUE)
+    expect_identical(df1$FEATURE_10, unname(logcounts(example_sce)[10,]))
+    expect_identical(df1$thing.thing_9, unname(logcounts(altExp(example_sce))[9,]))
+
+    # Graceully handles absent swaps.
+    df1 <- makePerCellDF(example_sce, features="FEATURE_1", swap.rownames="alchemist")
+    expect_false(any(grepl("gene|feature", colnames(df1), ignore.case=TRUE)))
 })
 
 test_that("makePerFeatureDF works as expected", {
